--- a/특강/css/main.css
+++ b/특강/css/main.css
@@ -14,118 +14,67 @@ li {
 a {
 	text-decoration: none;
 	color : black;
+
 }
 
-#menu {
-	position:relative;
-	width: 960px;
-	height: 60px;
-	margin:0 auto;
-}
 
-#menu a {
-	display: block;
-	text-align: center;
-	transition-duration: 0.5s;
-}
-#menu a:hover {
-	background:black;
-	color : #fff34f;
-}
-#menu > ul {
-	position: relative;
-	width:100%;
-	height: 60px;
-}
-#menu > ul > li  {
-	position : relative;
-	width:20%;
-	float:left;
-}
-
-#menu > ul > li > a {
-	font-weight: bold;
-	font-size: 16px;
-	line-height:50px;
-
-	width: 100px;
-	height: 50px;
-}
-
-#menu > ul > li > a:after {
-	content:'';
-	position: absolute;
-	right:0;
-	top:20px;
-
-	width:1px;
-	height:10px;
-
+body {
 	background: black;
 
 }
 
-#menu > ul > li:last-child > a:after {
-	content: none;
-}
-
-
-#menu > ul > li:first-child > a {
-	background: red;
-}
-
-.submenu {
-	position: absolute;
-	left: 0;
-	top: 50px;
-	width: 100%;
-	background: skyblue;
-	/*display: none;*/
-}
-
-.submenu a {
-	padding: 10px 0px;
-
-}
-
-.submenu > li:nth-child(3) {
-	background:orange !important;
-}
-
-.submenu > li:last-child{
-	background: orange !important;
-}
-
-
-#banner {
-	position: fixed;
-	width:100px;
-	height:100px;
-	right:-50px;
-	top:100px;
-
-	background: red;
-	cursor:pointer;
-	transition-duration: 0.5s
-	border-radius:100px;
-}
-
-#banner:hover {
-	right:0;
-}
-
-#content {
+#wrap {
 	position: relative;
-	width: 500px;
-	height: 200px;
-	background: yellow;
-	margin:0 auto;
+	margin: 50px auto;
+	width: 960px;
+	background: #ffffff;
+
 }
 
-#content:before {
-	content:"before";
+#header {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 80px;
+	background: skyblue;
 }
 
-#content:after {
-	content: "after";
+#footer {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 60px;
+	background: gray;
+	color: #ffffff;
+}
+
+#main {
+	position: relative;
+	display: block;
+	width: 100%;
+	overflow: hidden;
+}
+
+#left {
+	position: relative;
+	width: 200px;
+	float: left;
+
+}
+
+#right {
+	position: relative;
+	width: 700px;
+	float:right;
+
+}
+
+#fix_top {
+	position: fixed;
+	right:20px;
+	top:200px;
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	background: red;
 }
